--- a/src/js/containers/gallery-image.scss
+++ b/src/js/containers/gallery-image.scss
@@ -3,17 +3,15 @@
 #ImageGallery {
   & .GalleryImage {
     text-align: center;
-    border: 3px solid black;
-    width: 25%;
-    height: 300px;
+    border: 4px solid black;
     background-size: cover;
-    transition: transform 0.3s;
+    transition: transform 0.5s;
 
     &:hover {
       transform: scale(1.03);
       transition-timing-function: ease-out;
       & .sectiontitle {
-        background-color: rgba(245, 222, 179, 0.664);
+        background-color: #ffcdab69;
       }
     }
 
@@ -32,10 +30,11 @@
       width: 16em;
       color: black;
       box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.185);
-      background-color: rgba(245, 222, 179, 0.377);
+      background-color: #ffcdabb6;
       &:hover {
         cursor: pointer;
-        background-color: wheat;
+        background-color: #ffcdab;
+        transform: scale(1.1);
       }
     }
   }
