--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,12 +1,27 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway|Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
 
-/*font-family: 'Roboto', sans-serif;
-font-family: 'Raleway', sans-serif;*/
+/*
+font-family: 'Roboto', sans-serif;
+font-family: 'Raleway', sans-serif;
+font-family: 'Pacifico', cursive;
+*/
 
 $fatfont: "Roboto", sans-serif;
 $slimfont: "Raleway", sans-serif;
+$logofont: "Raleway", sans-serif;
 
-$color0: #272726;
+$color0: linear-gradient(
+    to bottom,
+    rgba(37, 37, 37, 0.514) 0%,
+    rgba(0, 0, 0, 0.829) 100%
+  ),
+  radial-gradient(
+      at top center,
+      rgba(48, 48, 48, 0.623) 0%,
+      rgba(0, 0, 0, 0.575) 120%
+    )
+    #000000ea;
 $color1: #ffa45c;
 $color2: #ffcdab;
 $color3: #fff4e3;
