--- a/src/js/containers/section-preview.scss
+++ b/src/js/containers/section-preview.scss
@@ -20,7 +20,14 @@
     height: 18em;
     width: 18em;
     background-size: cover;
+    .addToCart {
+      opacity: 0;
+      transition: opacity 350ms ease-in-out;
+    }
     &:hover {
+      .addToCart {
+        opacity: 0.8;
+      }
       transition-timing-function: ease-in-out;
       transform: scale(1.05);
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.26);
@@ -33,7 +40,6 @@
         text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.685);
         transform: scale(1.05);
         transition: transform 1s cubic-bezier(0.98, 1, 0.35, 0.95);
-        transform: scaleX(1.08);
       }
     }
   }
