--- a/src/js/components/navbar.scss
+++ b/src/js/components/navbar.scss
@@ -1,6 +1,7 @@
 @import "../../variables";
 
 nav {
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.719);
   #logo {
     color: $color1;
     font-family: "Pacifico", cursive;
