--- a/src/js/components/smallCardPreview.scss
+++ b/src/js/components/smallCardPreview.scss
@@ -1,6 +1,12 @@
+@import "../../variables";
+
 .small-card {
   cursor: default;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.123);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.37);
+  &:hover {
+    transition: all 250ms ease-in-out;
+    transform: scale(1.1);
+  }
   .small-card-image {
     height: 6em;
     width: 8em;
