--- a/src/js/containers/gallery-image.scss
+++ b/src/js/containers/gallery-image.scss
@@ -1,18 +1,21 @@
 @import "../../variables";
-
+* {
+  transition: all 550ms ease-in-out;
+}
 #ImageGallery {
+  margin-top: 1.5vw;
+
   & .GalleryImage {
     text-align: center;
-    border: 4px solid black;
     background-size: cover;
     transition: transform 0.5s;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.541);
 
     &:hover {
-      transform: scale(1.03);
+      transform: scale(1.06);
       transition-timing-function: ease-out;
       & .sectiontitle {
         background-color: #ffcdab69;
-        transition: all 500ms ease-in-out;
       }
     }
 
