--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -9,7 +9,7 @@ font-family: 'Pacifico', cursive;
 
 $fatfont: "Roboto", sans-serif;
 $slimfont: "Raleway", sans-serif;
-$logofont: "Raleway", sans-serif;
+$logofont: "Pacifico", cursive;
 
 $color0: linear-gradient(60deg, rgb(13, 20, 20) 20%, rgb(0, 6, 14) 100%),
   radial-gradient(
