--- a/src/js/components/navbar.scss
+++ b/src/js/components/navbar.scss
@@ -12,6 +12,14 @@
       transition: all 400ms ease-in-out;
     }
   }
+  .toggle {
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.534);
+    .toggler {
+      width: 1.5em;
+      height: 1.5em;
+      opacity: 0.8;
+    }
+  }
 
   .cart-icon {
     z-index: 2;
