--- a/src/js/containers/section-preview.scss
+++ b/src/js/containers/section-preview.scss
@@ -15,7 +15,7 @@
   color: $color1;
   padding: 1%;
   .fixmargin {
-    margin-left: 1vw;
+    margin-left: 11%;
   }
   .card-image {
     height: 18em;
