--- a/src/js/components/navbar.scss
+++ b/src/js/components/navbar.scss
@@ -24,11 +24,13 @@
     height: 30px;
     width: 30px;
     background-size: cover;
-    overflow-x: hidden;
+    overflow: hidden;
     border-radius: 50%;
+    cursor: default;
     color: $color1;
-    padding-left: 3px;
-    padding-top: 4px;
+    font-family: $slimfont;
+    padding-top: 3px;
+    font-size: 120%;
     background-color: black;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.404);
   }
