--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,12 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway|Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Pacifico&display=swap");
 
-/*
-font-family: 'Roboto', sans-serif;
-font-family: 'Raleway', sans-serif;
-font-family: 'Pacifico', cursive;
-*/
-
 $fatfont: "Roboto", sans-serif;
 $slimfont: "Raleway", sans-serif;
 $logofont: "Pacifico", cursive;
@@ -18,7 +12,7 @@ $color0: linear-gradient(60deg, rgb(13, 20, 20) 20%, rgb(0, 6, 14) 100%),
       rgba(0, 13, 20, 0.575) 100%
     )
     #00060e;
-$color1: #ffa45c;
+$color1: #fd9845;
 $color2: #ffcdab;
 $color3: #fff4e3;
 
