--- a/src/app.scss
+++ b/src/app.scss
@@ -7,10 +7,22 @@ $theme-colors: (
 
 html {
   height: 100%;
+  overflow-x: hidden;
   body {
     height: 100%;
     background: $color0;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    &::-webkit-scrollbar-track {
+      background-color: white;
+    }
+
+    &::-webkit-scrollbar {
+      width: 0.5em;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $color1;
+    }
   }
 }
