--- a/src/js/pages/contact/contact.scss
+++ b/src/js/pages/contact/contact.scss
@@ -1,7 +1,6 @@
 @import "../../../variables";
 .contact {
-  @include edgedContainer(4em, 2em, 4em);
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.486);
+  @include edgedContainer(2em, 0, 2em, 0);
   & .logo {
     color: $color1;
     font-family: $logofont;
