--- a/src/js/containers/section-preview.scss
+++ b/src/js/containers/section-preview.scss
@@ -4,10 +4,9 @@
   span {
     padding-left: 3%;
     margin: 2.5%;
-
     font-size: 1.2em;
     &:hover {
-      @include hovereffect($color1, $color3, $color3);
+      @include hovereffect($color1, $color3);
       text-shadow: 2px 2px 1px black;
       padding-right: 0.4em;
       transition: all 250ms ease-in-out;
