--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -22,12 +22,7 @@ $color3: #fff4e3;
   cursor: default;
 }
 
-@mixin edgedContainer(
-  $topRight: 0,
-  $topLeft: 0,
-  $bottomLeft: 0,
-  $bottomRight: 0
-) {
+@mixin edgedContainer() {
   width: 40em;
   height: 32.5em;
   padding: 1em;
@@ -35,8 +30,4 @@ $color3: #fff4e3;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.486);
   background: radial-gradient(ellipse at top, $color3, transparent),
     radial-gradient(ellipse at bottom, #f8f8f800, transparent);
-  border-top-right-radius: $topRight;
-  border-top-left-radius: $topLeft;
-  border-bottom-left-radius: $bottomLeft;
-  border-bottom-right-radius: $bottomRight;
 }
