--- a/client/src/js/containers/section-preview.scss
+++ b/client/src/js/containers/section-preview.scss
@@ -2,8 +2,8 @@
 
 .SectionPreview {
   span {
-    padding-left: 15%;
-    margin: 2.5%;
+    padding-left: 25px;
+    letter-spacing: 0.2em;
     font-size: 1.2em;
     text-decoration: none;
     &:hover {
